# CEmbedSomDLL

./: .gitignore  CEmbedSomDLL.vcxproj  CEmbedSomDLL.vcxproj.filters  CMakeLists.txt  README.md  main.cpp
src/: CEmbedSom.cpp  CEmbedSom.h  CMakeLists.txt  kamada-kawaii.hpp
